feat(lab7): Implement login, signup, and welcome screens with Retrofit API
This commit introduces the functionality for Lab 7, which includes user authentication (login and signup) using a remote API via Retrofit.

Key changes:
- **API Integration:**
  - Add `Retrofit` and `Gson` dependencies.
  - Implement `RetrofitClient` singleton for API communication.
  - Define `ApiService` interface with endpoints for `login` and `signup`.
  - Create `ApiResponse` model for handling server responses.

- **Authentication Screens:**
  - Add `lab7_login.xml` and `lab7_signup.xml` layouts for user input.
  - Create `Lab7LoginActivity` and `Lab7SignupActivity` to handle user interactions and API calls.
  - Implement a `lab7_welcome.xml` layout to greet users upon successful login, featuring an FPT logo and a user avatar.

- **Welcome Screen Features:**
  - `Lab7WelcomeActivity` allows users to change their avatar by either taking a new photo with the camera or selecting one from the gallery.
  - Add camera and storage permissions to `AndroidManifest.xml`.
  - Include new drawables fatores (`circle_shape.xml`, `default_avatar.xml`) for the welcome screen UI.

- **Project Structure:**
  - Reorganize existing activity classes into sub-packages based on their respective lab numbers (e.g., `activity.lab1`, `activity.lab2`).
  - Update `AndroidManifest.xml` to reflect the new activity paths.
  - Add a "Lab 7" button to the main screen to launch the new functionality.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -20,18 +22,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Lab2Activity" />
-        <activity android:name=".Lab1Activity" />
-        <activity android:name=".Lab3Activity" />
-        <activity android:name=".Lab4FacebookActivity" />
-        <activity android:name=".Lab4InstagramActivity" />
-        <activity android:name=".ui.login.Lab5SignUpActivity" />
-        <activity android:name=".ui.login.Lab5MainActivity"/>
-        <activity android:name=".ui.login.Lab5WelcomeActivity"/>
-        <activity android:name=".Lab6LoginActivity"/>
-        <activity android:name=".Lab6MainActivity"/>
-        <activity android:name=".Lab6SignupActivity"/>
-        <activity android:name=".Lab6WelcomeActivity"/>
+        <activity android:name=".activity.lab2.Lab2Activity" />
+        <activity android:name=".activity.lab1.Lab1Activity" />
+        <activity android:name=".activity.lab3.Lab3Activity" />
+        <activity android:name=".activity.lab4.Lab4FacebookActivity" />
+        <activity android:name=".activity.lab4.Lab4InstagramActivity" />
+        <activity android:name=".activity.lab5.Lab5SignUpActivity" />
+        <activity android:name=".activity.lab5.Lab5MainActivity"/>
+        <activity android:name=".activity.lab5.Lab5WelcomeActivity"/>
+        <activity android:name=".activity.lab6.Lab6LoginActivity"/>
+        <activity android:name=".activity.lab6.Lab6MainActivity"/>
+        <activity android:name=".activity.lab6.Lab6SignupActivity"/>
+        <activity android:name=".activity.lab6.Lab6WelcomeActivity"/>
+        <activity android:name=".activity.lab7.Lab7LoginActivity"/>
+        <activity android:name=".activity.lab7.Lab7SignupActivity"/>
+        <activity android:name=".activity.lab7.Lab7WelcomeActivity"/>
     </application>
 
 </manifest>
