feat(lab8): Implement session management, avatar upload, and password reset
This commit enhances the authentication system by introducing session persistence, user avatar uploading, and a "forgot password" feature. It also refactors the existing Lab 7 functionality into Lab 8.

**Key Changes:**

- **Session Management:**
  - Integrates `PersistentCookieJar` to maintain user login sessions across app restarts.
  - Implements a `check_session` API call on startup to automatically log in the user if a valid session exists.
  - Adds a "Remember me" checkbox to the login screen.
  - Implements a logout feature that clears the session and cookies.

- **Avatar Upload:**
  - Users can now select an image from the gallery or take a new photo to set as their avatar on the welcome screen.
  - Implements `uploadAvatar` API endpoint using a `Multipart` request to upload the image file.
  - Adds necessary `CAMERA` and `READ_MEDIA_IMAGES` permissions to `AndroidManifest.xml`.
  - Uses `Glide` to load and display user avatars.
  - Adds a `FileUtils` helper to get the real path of an image from its Uri.

- **Forgot Password:**
  - Adds a "Forgot Password" screen (`lab8_forgot_password.xml`) and corresponding `Lab8ForgotPasswordActivity`.
  - Implements the `forgotPassword` API endpoint to allow users to reset their password by providing their username and a new password.

- **API and Networking:**
  - Upgrades `Retrofit` and adds `OkHttp` with a logging interceptor for improved debugging.
  - The `RetrofitClient` is now configured with the cookie jar for session handling.
  - The `ApiService` is expanded with new endpoints for `forgotPassword`, `checkSession`, `logout`, and `uploadAvatar`.
  - `LoginResponse` model is updated to include user data (username, avatar) upon successful login.

- **Project Refactoring:**
  - All classes and layout files related to `lab7` have been renamed and moved to a `lab8` package.
  - The main activity button now launches `Lab8LoginActivity`.
  - Dep

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     androidTestImplementation libs.espresso.core
     implementation platform('com.google.firebase:firebase-bom:34.3.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:3.0.0'
+    implementation libs.okhttp
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.11.0'
+    implementation 'com.github.franmontiel:PersistentCookieJar:1.0.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 }
